# sam-queries

./: .cspell.json  .dockerignore  .env.example  .gitattributes  .gitignore  .jscpd.json  .mega-linter.yml  .pre-commit-config.yaml  .trivyignore  CLAUDE.md  CONTRIBUTING.md  DASHBOARD_REFACTORING.md  DASHBOARD_REFACTORING_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  MARSHMALLOW_PHASE8_PLAN.md  MARSHMALLOW_PLAN.md  Makefile  NOTES.txt  README.md  REFACTORING_SUMMARY.md  Recommendations.md  Resume.md  compose.yaml  conda-env.yaml  conda-env.yml  docker-compose.yaml  driver.sh  foo.ipynb  gen_context.sh  install.sh  install_local.sh  preview_email_template.py  pyproject.toml  pytest.ini  sam_models.py  sam_models_jobs.py  sam_models_jobs_queries.py  sam_orm_examples.py  sam_orm_interactive.ipynb  (+10 more)
.claude/commands/: container-logs.md  container-up.md  db-query.md  schema-check.md  test.md  webui-dev.md
.github/scripts/: prune_ghcr_packages.py  render_build_summary.py
.github/workflows/: build-images-cirrus-deploy.yaml  build-images.yaml  ci-staging.yaml  clean-ghcr.yaml  cron-clean-action-log.yaml  deploy-staging.yaml  manually-clean-action-log.yaml  mega-linter.yaml  mega-linter.yml  sam-ci-conda_make.yaml  sam-ci-docker.yaml  sam-ci.yaml  sam-ci.yml  sync-staging-to-main.yaml  test-install.yaml
collectors/: .env.example  README.md  pyproject.toml  requirements.txt  run_collectors.sh
collectors/casper/: collector.py  config.yaml
collectors/cron_scripts/: crontab  run_ncar_collectors.sh
collectors/derecho/: collector.py  config.yaml
collectors/docs/: PBS_COLLECTORS_ADD_RESERVATIONS_PLAN.md  PBS_COLLECTORS_PLAN.md
collectors/jupyterhub/: collector.py  config.yaml
collectors/lib/: __init__.py  api_client.py  base_collector.py  config.py  exceptions.py  logging_utils.py  parallel_ssh.py  pbs_client.py  ssh_utils.py
collectors/lib/parsers/: __init__.py  filesystems.py  jobs.py  jupyterhub_nodes.py  nodes.py  queues.py  reservations.py
containers/: rebuild-db.yaml
containers/collectors/: Dockerfile  Makefile
containers/sam-sql-dev/: .gitattributes  .gitignore  ANONYMIZATION_PROCESS.md  ANONYMIZATION_README.md  ANONYMIZATION_SUMMARY.md  COLLISION_FIXES.md  DOCKER_COMPOSE_CI.md  DOCKER_RESTORE_USAGE.md  Dockerfile  Makefile  PRESERVE_USERNAMES_FEATURE.md  README.md  TESTING_SUMMARY.md  USERNAME_ANONYMIZATION_FIX.md  anonymize_sam_db.py  bootstrap_clone.py  check_username_leak.py  cleanup_orphans.py  config.yaml  docker-compose.ci.yaml  docker-compose.ci.yml  docker-compose.yaml  docker-compose.yml  docker-init.sh  docker_start.sh  init-db.sh  preview_anonymization.py  prompt_history.txt  run_anonymization_workflow.sh  test_failed_tables.py  test_username_anonymization.py  verify_anonymization.py
containers/webapp/: Dockerfile  Makefile  gunicorn_config.py
docs/: AUTHENTICATION.md  CIRRUS-k8s-cmds.sh  CIRRUS_PUBLISHING.md  CREDENTIALS.md  CUSTOM_COMMANDS.md  DATABASE_SWITCHING.md  DOCKER_TROUBLESHOOTING.md  GETTING_STARTED.md  HPC_DATA_COLLECTORS_GUIDE.md  INDEX.md  LOCAL_SETUP.md  ORM-fixup.md  PBS_COLLECTORS_PLAN.md  PROJECT_WORKFLOWS_PLAN.md  README-k8s.md  SCHEMA_VISUALIZATION.md  SCRIPTS.md  SCRIPT_ORGANIZATION.md  SETUP_SUMMARY.md  STAGING.md  STYLING_FUTURE_WORK.md  SYSTEM_DASHBOARD_INTERIM_REFACTOR.md  SYSTEM_DASHBOARD_PLAN.md  TESTING.md  USER_PROJ_QUEUE_QUICKSTART.md  WEBAPP_SETUP.md  k8s.md
docs/apis/: CHARGING_INTEGRATION.md  SYSTEMS_INTEGRATION_APIs.md
docs/integration/: NEXT_GID.md
docs/nrit-review-2026-05/: .gitignore  01_orientation.md  02_web.md  03_status.md  04_orm_cli.md  05_collector.md  06_platform.md  07_docs.md  08_action_register.md  08_strengths.md  08_synthesis.md  09_zap_rescan-2026-06.md  10_zap_baseline-2026-06.md  README.md  filter-zap-report.py  run-zap-manual-explore.sh  zap-basic-report.html  zap-manual-report-filtered.html
docs/plans/: ACCOUNTING_JOBS.md  ADMIN_PANEL_EXPIRATIONS_VIEW_PLAN.md  ALLOC-DASHBOARD-PROFILING.md  ALLOCATIONS_DASHBOARD.md  ALLOCATION_TREE_EDITING.md  CHARGE_SUMMARIES.md  CLI_JSON.md  CNAME_PLAN.md  CSP.md  ChargeRegistry.md  DEFERRED-CSP-discussion.md  DESTOR_SCAN_VIEW.md  DISK_ACTIVITY.md  DISK_BILLING_REFACTOR.md  DISK_CHARGE_SUMMARY-only.md  DISK_CHARGING.md  DISK_PER_FILESET.md  EDIT_PROJECTS.md  FACILITY_SCOPED_ADMIN.md  FIX_TREE_EXTENSION_bugs.md  FLASK_ADMIN_ENHANCEMENTS.md  FSTREE_API-address-deficiencies.md  FS_SCANS_PHASE3.md  FS_SCANS_PLUGIN-part1.md  FS_SCANS_STATUS_TAB.md  FS_SCANS_WEBUI.md  HTMX_improvements.md  JOBHIST_jobs_search.md  (+24 more)
etc/: config_env.sh
helm/: Chart.yaml  local-secrets.sh  values-local.yaml  values.yaml
infrastructure/: .gitignore  README.md
migrations/: README.md
new_tests/: README.md  conftest.py  pytest.ini
python/: ANONYMIZATION_PRESERVE_USERNAMES.md  run_anonymization_workflow.sh  sam_search.py  system_status.py
queries/: Future_project_expiration.sql  Inactive_projects.sql  alloc_history.sql  expiring_projects.sql  hpc_activity_summary.sql  hpc_annual_usage.sql  hpc_annual_usage_only.sql  hpc_heavy_users.sql  hpc_quarterly_usage.sql  project_directories.sql
scratch/: pace_chart.html  pace_chart_sketch.py  pace_chart_stacked.html  pace_chart_stacked_sketch.py
scripts/: README.md  check_db_drift.py  cirrus_healthcheck.sh  cirrus_weblog_audit.sh  cleanup_status_data.py  create_status_db.sql  export_project_users.sh  gen_api_key.py  ingest_mock_status.py  k8s_cmds.sh  orm_inventory.py  setup_status_db.py  test_status_db.py  validate_user_proj_usage.py  zap_probe_docker.sh
sql/: gen_context.sh  sample_annual_usae_report.csv  table_context.txt
src/: config.py  sam_search_cli.py
tests/: CURRENT_PLAN.md  FINAL_TEST_SUMMARY.md  FUTURE_IMPROVEMENTS_PLAN.md  README.md  SCHEMA_FIX_PLAN.md  TEST_RESULTS_SUMMARY.md  check_environment.sh  conftest.py  pytest.ini  test_allocation_schemas.py  test_basic_read.py  test_config.py  test_crud_operations.py  test_new_models.py  test_sam_search_cli.py  test_schema_validation.py  test_schemas.py  test_views.py
utils/: HEADER  run-webui-dbg.sh  sample_collector_commands.sh  split_classes.py  wrap_classes.py
(+979 files in other folders)
