[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samuel"
version = "0.1.0"
description = "Systems Accounting Manager (SAM) System - ORM and Webapp"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "NCAR/CISL internal use" }
authors = [
  { name = "NCAR/CISL", email = "csg@ucar.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: Flask",
    "Private :: Do Not Upload"
]

dependencies = [
    "cryptography",
    "flask",
    "flask-admin",
    "flask-login",
    "flask-sqlalchemy",
    "gunicorn",
    "marshmallow-sqlalchemy",
    "matplotlib",
    "pymysql",
    "python-dotenv",
    "pyyaml",
    "requests",
    "rich",
    "sqlalchemy",
    "tqdm",
    "click",
]

[project.scripts]
sam-search = "sam_search_cli:cli"
sam-status = "system_status:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "pytest-xdist",
]
dev = ["samuel[test]", "jupyterlab", "pandas"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["src/sam", "src/system_status", "src/webapp"]
omit = [
    "src/sam/queries/examples.py",
    "src/webapp/utils/charts.py",
    "src/webapp/utils/project_permissions.py",
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/migrations/*",
    "*/scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2
fail_under = 70.0

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-fail-under=70",
    "-n auto",  # Parallel execution (3x faster without --cov, same speed with --cov)
]