[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samuel"
version = "0.1.0"
description = "Systems Accounting Manager (SAM) System - ORM, CLI tools, and Webapp"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "NCAR/CISL internal use" }
authors = [
  { name = "NCAR/CISL", email = "csg@ucar.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: Flask",
    "Private :: Do Not Upload"
]

dependencies = [
    # hpc-usage-queries for job history & summary charges
    "hpc-usage-queries @ https://github.com/benkirk/hpc-usage-queries.git",

    # ... other dependencies from PyPI
    "click",
    "cryptography",
    "flask",
    "flask-admin",
    "flask-caching",
    "flask-login",
    "flask-sqlalchemy",
    "gunicorn",
    "marshmallow-sqlalchemy",
    "matplotlib",
    "pymysql",
    "python-dotenv",
    "pyyaml",
    "requests",
    "rich",
    "sqlalchemy",
    "tqdm",
]

[project.scripts]
sam-search = "cli.cmds.search:cli"
sam-admin = "cli.cmds.admin:cli"
sam-status = "system_status:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "pytest-xdist",
]
dev = ["samuel[test]", "jupyterlab", "pandas", "pre-commit"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["src/sam", "src/system_status", "src/webapp"]
omit = [
    "src/sam/queries/examples.py",
    "src/webapp/utils/charts.py",
    "src/webapp/utils/project_permissions.py",
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/migrations/*",
    "*/scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2
fail_under = 70.0

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-fail-under=70",
    "-n auto",  # Parallel execution (3x faster without --cov, same speed with --cov)
]