[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samuel"
version = "0.1.0"
description = "Systems Accounting Manager (SAM) System - ORM, CLI tools, and Webapp"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "NCAR/CISL internal use" }
authors = [
  { name = "NCAR/CISL", email = "csg@ucar.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: Flask",
    "Private :: Do Not Upload"
]

dependencies = [
    # ... other dependencies from PyPI
    "bcrypt",
    "cachetools",
    "click",
    "cryptography",
    "flask",
    "flask-admin",
    "flask-caching",
    "flask-login",
    "flask-sqlalchemy",
    "gunicorn",
    "marshmallow-sqlalchemy",
    "matplotlib",
    "psycopg2-binary",
    "pymysql",
    "python-dotenv",
    "pyyaml",
    "authlib>=1.3.0,<2.0.0",
    "requests",
    "rich",
    "sqlalchemy",
    "tqdm",
]

[project.scripts]
sam-search = "cli.cmds.search:cli"
sam-admin = "cli.cmds.admin:cli"
sam-status = "system_status:main"

[project.optional-dependencies]
hpc = [
    # hpc-usage-queries: job history & charge summary ingest (sam-admin accounting --comp)
    "hpc-usage-queries[postgres] @ git+https://github.com/benkirk/hpc-usage-queries.git",
]
test = [
    "pytest",
    "pytest-cov",       # --cov=src coverage reports (CI: sam-ci-docker.yaml)
    "pytest-timeout",   # pytest.ini timeout = 300
    "pytest-xdist",     # pytest.ini addopts -n auto (parallel)
    # Deps deferred until their workstream lands (see
    # docs/plans/TEST_SUITE_RESIDUALS.md):
    #   factory-boy, faker            → Gap A / future factories
    #   pytest-benchmark              → Gap A latency smoke
    #   pyright                       → Gap B type checking
    # Re-add to this list when starting the corresponding workstream.
]
dev = ["samuel[test]", "jupyterlab", "pandas", "pre-commit"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["src/sam", "src/system_status", "src/webapp"]
omit = [
    "src/sam/queries/examples.py",
    "src/webapp/utils/charts.py",
    "src/webapp/utils/project_permissions.py",
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/migrations/*",
    "*/scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2
# 60.0 gives us a ~8-point safety margin below the current 67.82% baseline
# without requiring new tests for the admin HTMX routes (which are a
# separate workstream). Bump this as we add coverage, don't drop it.
fail_under = 60.0

[tool.coverage.html]
directory = "htmlcov"

# Note: pytest configuration lives in /pytest.ini at the repo root, not here.
# A duplicate [tool.pytest.ini_options] section used to live in this file
# but was dead code (pytest.ini takes precedence) and drifted from reality.
# The root pytest.ini has the authoritative config: testpaths, addopts,
# markers, xdist parallelism, and the --no-cov default for inner-loop speed.